[V119-specific] Use voter.Height rather than voter.FinalisedHeight for streaming swap adjustment
